# travel-marketing-ai

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.agent  LICENSE  README.ja.md  README.md  SECURITY.md  azure.yaml  main.py  package-lock.json  pyproject.toml
.github/: copilot-instructions.md  copilot-setup-steps.yml
docs/: api-reference.md  approval-security.md  architecture.drawio  azure-architecture.md  azure-setup.md  demo-script.md  deployment-guide.md  manager-approval-workflow.md  requirements_v3.5.md  requirements_v3.7.md  requirements_v3.md  requirements_v4.0.md  sse-event-schema.md
frontend/: auth-redirect.html  package-lock.json  package.json  vite.config.ts
functions/: function_app.py
infra/: abbreviations.json  main.bicep  main.json  main.parameters.json
mcp_server/: README.md  improvement_brief.py
scripts/: debug_conversation.py  deploy_improvement_mcp.py  postprovision.py  run_evaluations.py  setup_knowledge_base.py  verify_foundry_fabric_connection.py
src/: agent_client.py  capabilities.py  config.py  conversations.py  diagnostics.py  foundry_prompt_agents.py  foundry_tracing.py  hosted_agent.py  http_client.py  improvement_mcp.py  main.py  mcp_auth_registry.py  model_deployments.py  pipeline_schemas.py  request_identity.py  session_cookie.py  tool_telemetry.py  work_iq_context.py  work_iq_session.py
tests/: test_agents.py  test_anonymous_session_cookie.py  test_capabilities.py  test_chat.py  test_chat_pipeline.py  test_config.py  test_conversations.py  test_conversations_unit.py  test_data_search_foundry.py  test_diagnostics.py  test_evaluate.py  test_foundry_prompt_agents.py  test_foundry_tracing.py  test_health.py  test_hosted_agent.py  test_improvement_mcp.py  test_infra_bicep_static.py  (+14 more)
(+194 files in other folders)
